k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: client-deployment
spec:
 replicas: 1
 selector:
  matchLabels:
   fanname: client
 template:
  metadata:
   labels:
    fanname: client
  spec:
   containers:
    - name: client
      image: fanzoudocker/multi-client
      ports:
      - containerPort: 3000
