k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: postgres-deployment
spec:
 replicas: 1
 selector:
  matchLabels:
   fanname: postgres
 template:
  metadata:
   labels:
    fanname: postgres
  spec:
   volumes:
    - name: db-vol
      persistentVolumeClaim:
       claimName: db-pvc
   containers:
    - name: postgres
      image: postgres
      ports:
       - containerPort: 5432
      volumeMounts:
       - name: db-vol
         mountPath: /var/lib/postgressql/data
         subPath: postgres
