k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: server-deployment
spec:
 replicas: 1
 selector:
  matchLabels:
   fanname: server
 template:
  metadata:
   labels:
    fanname: server
  spec:
   containers:
    - name: server
      image: fanzoudocker/multi-server
      ports:
       - containerPort: 5000
