k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: worker-deployment
spec:
 replicas: 1
 selector:
  matchLabels:
   fanname: worker
 template:
  metadata:
   labels:
    fanname: worker
  spec:
   containers:
    - name: worker
      image: fanzoudocker/multi-worker
      ports:
       - containerPort: 6000
