k8s/client-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
 name: client-cluster-ip 
spec:
 type: ClusterIP
 selector:
  fanname: client
 ports:
  - port: 3000
    targetPort: 3000
