k8s/postgres-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
 name: postgres-cluster-ip
spec:
 type: ClusterIP
 selector:
  fanname: postgres
 ports:
  - port: 5432
    targetPort: 5432
