k8s/redis-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
 name: redis-cluster-ip
spec:
 type: ClusterIP
 selector:
  fanname: redis
 ports:
  - port: 6379
    targetPort: 6379
