k8s/server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
 name: server-cluster-ip
spec:
 type: ClusterIP
 ports:
  - port: 5000
    targetPort: 5000
 selector:
  fanname: server
